2011-08-17  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/wcoll.c :
	  Detect invalid #include lines in wcoll files.

2011-08-16  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/wcoll.c :
	  Change strstep to strtok for portability as suggested by
	  macnfaf at gmail.com.

2011-08-13  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/opt.c (wcoll_expand) :
	  Fix memory leak.

2011-08-12  Mark Grondona <mgrondona@llnl.gov>

	* tests/t0003-wcoll.sh :
	  Add tests for #include usage with WCOLL and -w.

	* src/pdsh/wcoll.c :
	  Use the dirname of the wcoll file (or "." if reading
	  from stdin) as the search path for WCOLL files supplied
	  via environment variable or to -w ^file.

	* tests/t1002-dshgroup.sh :
	  Add tests for #include syntax with dshgroup.

	* src/modules/dshgroup.c :
	  Use read_wcoll_path instead of read_wcoll.

	* src/pdsh/wcoll.c, src/pdsh/wcoll.h :
	  Add read_wcoll_path to read wcoll from a path,
	  with #include syntax.

2011-07-26  Mark Grondona <mgrondona@llnl.gov>

	* scripts/dshbak :
	  Properly handle coalescing hosts across 9,10 99,100
	  boundaries when zero-padding is in effect. e.g. 09-10
	  099-100, etc. (Fixes issue 33).

	* tests/t5000-dshbak.sh:
	  Add tests for proper compress over zero-pad boundaries
	  like 09-10 and 099-100, etc.

2011-04-29  Mark Grondona <mgrondona@llnl.gov>

	* : tag pdsh-2.26.

	* tests/Makefile.am, tests/Makefile.in :
	  Run runtests.sh during "make check" instead of
	  individual tests. This allows running tests under
	  SHELL_PATH.

	* tests/runtests.sh :
	  Exit non-zero from runtests.sh if any tests fail.

	* tests/runtests.sh :
	  Use $SHELL_PATH to invoke tests. Set SHELL_PATH to
	  /usr/bin/bash and GIT_TEST_CMP to cmp on AIX.

	* tests/t0006-pdcp.sh :
	  Avoid using GNU-specific options to utilities like
	  cp(1) and diff(1) for better portability. Replace explicit
	  calls to diff with $GIT_TEST_CMP where possible.

	* tests/test-lib.sh, tests/t0001-basic.sh,